chore: fix cmake link issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,14 @@
-cmake_minimum_required(VERSION 2.6.0)
+cmake_minimum_required(VERSION 3.10)
+set(project_name pstyle)
+set(${project_name}_version_major 1)
+set(${project_name}_version_minor 0)
 
-# here we specify that the project is C language only, so the default
-# C compiler on the system will be used
-project(pstyle C)
-
-add_executable(pstyle pstyle.c)
-target_include_directories(pstyle PUBLIC
-                            "${PROJECT_BINARY_DIR}")
+configure_file(pstyle.in.h lib/pstyle.h)
+add_library(${project_name})
+project(${project_name} VERSION 1.0)
+target_include_directories(${project_name} PRIVATE lib)
+target_sources(${project_name} PRIVATE
+    lib/colors.h
+    lib/pstyle.h
+)
+set_target_properties(${project_name} PROPERTIES LINKER_LANGUAGE C)
